# termtools

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json  termtools.h
docs/: color.texi  console.texi  index.texi  keyboard.texi  logger.texi  markdown.texi  overview.texi  progress.texi  prompt.texi  style.texi  table.texi  text.texi  ui-components.texi  utils.texi
examples/: CMakeLists.txt  colors_demo.cpp  demo.cpp  keyboard_demo.cpp  logger_demo.cpp  markdown_demo.cpp  progress_demo.cpp  prompt_demo.cpp  table_demo.cpp
pixel/: buffer.h  pixel.h  stylesheet.h
pixel/backend/: ansi_backend.h  backend.cpp
pixel/effects/: effects.h  gradient.h  shadow.h
pixel/examples/: demo.cpp  game_of_life.cpp
pixel/primitives/: circle.h  image.h  rect.h  text.h
termtools/: color.cpp  columns.cpp  console.cpp  group.cpp  internal.h  keyboard.cpp  logger.cpp  panel.cpp  platform.cpp  progress.cpp  prompt.cpp  status.cpp  style.cpp  table.cpp  text.cpp  utils.cpp
termtools/color/: color.cpp  color.h
termtools/components/logger/: logger.cpp  logger.h  status.cpp  status.h
termtools/components/markdown/: markdown.cpp  markdown.h
termtools/components/panel/: panel.cpp  panel.h
termtools/components/progress/: progress.cpp  progress.h
termtools/components/table/: table.cpp  table.h
termtools/core/: console.cpp  console.h  internal.h  platform.cpp  style.cpp  style.h
termtools/core/formatting/: color.cpp  style.cpp  style.h  text.cpp  text.h
termtools/core/input/: keyboard.cpp  keyboard.h  prompt.cpp  prompt.h
termtools/core/internal/: ansi.h  internal.h  platform.cpp  types.h
termtools/core/output/: console.cpp  console.h
termtools/input/: keyboard.cpp  keyboard.h  prompt.cpp  prompt.h
termtools/logger/: logger.cpp  logger.h  status.cpp  status.h
termtools/markdown/: markdown.cpp  markdown.h
termtools/pixel/: canvas.h
termtools/pixel/backend/: backend.h
termtools/pixel/effects/: effect.h  glow.h
termtools/pixel/examples/: clock.cpp
termtools/pixel/layout/: flex.h  grid.h  layout.h
termtools/pixel/primitives/: line.h  primitive.h  primitives.h
termtools/progress/: progress.cpp  progress.h
termtools/text/: text.cpp  text.h
termtools/ui/: codeblock.cpp  codeblock.h  columns.cpp  columns.h  components.h  divider.cpp  divider.h  group.cpp  group.h  heading.cpp  heading.h  list.cpp  list.h  panel.cpp  panel.h  quote.cpp  quote.h  table.cpp  table.h
termtools/ui/codeblock/: codeblock.cpp  codeblock.h
termtools/ui/columns/: columns.cpp  columns.h
termtools/ui/divider/: divider.cpp  divider.h
termtools/ui/group/: group.cpp  group.h
termtools/ui/heading/: heading.cpp  heading.h
termtools/ui/list/: list.cpp  list.h
termtools/ui/quote/: quote.cpp  quote.h
termtools/utils/: utils.cpp  utils.h
tests/: CMakeLists.txt  test_color.cpp  test_console.cpp  test_markdown.cpp  test_table.cpp  test_text.cpp  test_utf8.cpp
